# OtherCmakeProjectVCPKG

./: CMakeLists.txt  main.cpp
